--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body { 
     font-family:"Hiragino Sans GB", "Microsoft Yahei", Helvetica, Arial, sans-serif; 
     font-size: 16px; 
-    background-color: #eee;
-    background-image: url(../img/bg.jpg);
+    background-color: #5FB0D6;
+    background-image: url(../img/bg.png);
 }
 .container {
 max-width: 800px;
